# CPFA-ARGoS

./: .gitignore  .travis.yml  CMakeLists.txt  CPFA.xml  CPFAPLError4.xml  CPFA_6robots_30mins_10m2_powerlaw.txt  README.md  argos_log.txt  argos_util.py  build.sh  cpfa_log.txt  doEvolutions.sh  doexperiments.sh  evolution.txt  evolution_powerlaw_previous.txt  evolve.sh  evolve_EXAMPLE.sh  evolve_clustered.out  evolve_clustered.sh  evolve_powerlaw.sh  evolve_powerlaw_previous_turn_params.sh  evolve_uniform.out  evolve_uniform.sh  experiments.py  ga.py  giveup.txt  log  log.txt  moses_cluster  mpi_cluster_test  mpi_cluster_work  nohup.out  nohup_doexperiments.sh  run.sh  run_10_3types_ga.sh  run_20_3types_ga.sh  run_2_3types_ga.sh  run_5_3types_ga.sh  runexperiments.sh  runexperimentset1.sh  (+8 more)
CPFA-ARGoS.backup/: .gitignore  CMakeLists.txt  evolve.sh  experiment.sh  mpi_cluster_home  testmpi
CPFA-ARGoS.backup/cmake/: FindGALIB.cmake
CPFA-ARGoS.backup/source/: CMakeLists.txt  evolution.txt  example.c  main.cpp  run.sh
CPFA-ARGoS.backup/source/Base/: BaseController.h  Food.cpp  Pheromone.cpp
CPFA-ARGoS.backup/source/CPFA/: CPFA_controller.h
CPFA-ARGoS.backup/source/ga-mpi/: cmake_install.cmake
experiments/: 4MPFAExample.xml  CPFA.xml  CPFAC2_27_16GA.xml  CPFACError0.xml  CPFACError1.xml  CPFACError10.xml  CPFACError2.xml  CPFACError3.xml  CPFACError4.xml  CPFACError5.xml  CPFACError6.xml  CPFACError7.xml  CPFACError8.xml  CPFACError9.xml  CPFAEvolver.xml  CPFAExample.xml  CPFAExampleEvolution.xml  CPFAExampleWithVisualisation.xml  CPFAPL.xml  CPFAPL10Searchers.xml  CPFAPL11Searchers.xml  CPFAPL12Searchers.xml  CPFAPL13Searchers.xml  CPFAPL14Searchers.xml  CPFAPL15Searchers.xml  CPFAPL1Searchers.xml  CPFAPL20Searchers.xml  CPFAPL25Searchers.xml  CPFAPL2Searchers.xml  CPFAPL30Searchers.xml  CPFAPL3Searchers.xml  CPFAPL4Searchers.xml  CPFAPL5Searchers.xml  CPFAPL6Searchers.xml  CPFAPL7Searchers.xml  CPFAPL8Searchers.xml  CPFAPL9Searchers.xml  CPFAPLError0.xml  CPFAPLError1.xml  CPFAPLError10.xml  (+68 more)
final_results/: CPFACError0.txt  CPFACError1.txt  CPFACError10.txt  CPFACError2.txt  CPFACError3.txt  CPFACError4.txt  CPFACError5.txt  CPFACError6.txt  CPFACError7.txt  CPFACError8.txt  CPFACError9.txt  CPFAPL10Searchers.txt  CPFAPL11Searchers.txt  CPFAPL12Searchers.txt  CPFAPL13Searchers.txt  CPFAPL14Searchers.txt  CPFAPL15Searchers.txt  CPFAPL1Searchers.txt  CPFAPL2Searchers.txt  CPFAPL3Searchers.txt  CPFAPL4Searchers.txt  CPFAPL5Searchers.txt  CPFAPL6Searchers.txt  CPFAPL7Searchers.txt  CPFAPL8Searchers.txt  CPFAPL9Searchers.txt  CPFAPLError0.txt  CPFAPLError1.txt  CPFAPLError10.txt  CPFAPLError2.txt  CPFAPLError3.txt  CPFAPLError4.txt  CPFAPLError5.txt  CPFAPLError6.txt  CPFAPLError7.txt  CPFAPLError8.txt  CPFAPLError9.txt  CPFAUError0.txt  CPFAUError1.txt  CPFAUError10.txt  (+8 more)
final_results/old/: CPFAPL13Searchers.txt  CPFAPL14Searchers.txt  CPFAPL15Searchers.txt  CPFAPL8Searchers.txt  CPFAPL9Searchers.txt  CPFAPLError0.txt
results/: .~lock.CPFA-master-b689606-116-1-28-10-54-21.csv#
source/: CMakeLists.txt  evolution.txt  evolver.cpp  example  example.c  main.cpp  main_mpi.cpp  main_no_mpi.cpp  makefile  run.sh
source/Base/: BaseController.cpp  BaseController.cpp~  BaseController.h  BaseController.h~  CMakeLists.txt  CMakeLists.txt~  Nest.cpp  Nest.h  Pheromone.cpp  Pheromone.h
source/CPFA/: CMakeLists.txt  CPFA_controller.cpp  CPFA_controller.h  CPFA_loop_functions.cpp  CPFA_loop_functions.h  CPFA_qt_user_functions.cpp  CPFA_qt_user_functions.h
source/GA/: a.out  galibexample.cpp
source/ga-mpi/: CMakeCache.txt  CMakeLists.txt  Makefile
test/: CMakeLists.txt
test/CPFA/: CMakeLists.txt  CPFA_loop_functions_test.cpp  CPFA_loop_functions_test.h
